--- a/style.css
+++ b/style.css
@@ -15,11 +15,13 @@ body {
     background-color: #1F2937;
 }
 
-.right-links-list {
-    display: flex;
-    flex-direction: row;
+.header-logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bolder;
 
 }
+
 
 /* resyles links and list */
 
@@ -34,20 +36,22 @@ li {
 }
 
 a {
+    font-size: 16px;
     text-decoration: none;
+    color: #F9FAF8;
 }
 
 /* establishes welcome container and children containers */
 
 .welcome-info-container {
-    padding: 4px 12px 0px;
+    padding: 6px 12px 0px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     text-align: left;
     align-items: center;
     gap: 72px;
-    padding-top: 48px;
+    background-color: #1F2937;
 
 }
 
@@ -57,7 +61,9 @@ a {
     justify-content: flex-start;
 }
 
-/* styles and position elemetns */
+
+
+/* styles and position elements */
 
 .welcome-image{
     flex-grow: 0;
@@ -71,13 +77,46 @@ a {
 
 }
 
-/* this influences button as a globally */
-.button {
-    max-width: 84px;
-    max-height: 42px;
+.welcome-heading {
+    font-size: 48px;
+    font-weight: 1000;
+    color: #F9FAF8;
+    margin: 12px;
+}
+
+.welcome-message{
+    font-size: 18px;
+    color: #E5E7EB;
+    margin: 8px 12px;
+}
+
+.right-links-list {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.welcome-info-container .sign-up-button{
+    padding: 12px 48px;
+    max-width: 96px;
+    padding: 12px;
+    margin: 12px;
+    border-radius: 9px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: #3882F6;
+    color:#E5E7EB;
+
 }
 
 /* postions addtional info section */
+.additional-info-header {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
 .additional-info-header {
     margin-top: 48px;
     text-align: center;
@@ -86,9 +125,9 @@ a {
 .additional-info-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    gap: 32px;
-    margin: 42px 12px;
+    justify-content: center;
+    gap: 8px;
+    margin: 0px 12px 42px;
 }
 
 /* styles and potisions elements */
@@ -99,22 +138,32 @@ a {
     border-style: solid;
     border-width: 2px;
     border-radius: 4px;
-    /* margin: 0 auto; */
+    border-color: #3882F6;
 }
 
 .item {
+    width: 90px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 12px;
     gap: 6px;
 }
 
 .item .subtext {
     text-align: center;
+    color: rgb(123, 119, 119);
 }
 
 /* syles and positions quotes section */
+.quote-section{
+    display: flex;
+    align-items: center;
+    background-color: #E5E7EB;
+    padding: 72px 0;
+}
+
 .quote-container {
     flex-grow: 0;
     display: flex;
@@ -122,7 +171,13 @@ a {
     justify-content: center;
     gap: 6px;
     margin: 0 auto;
+}
 
+.quote-paragraph {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
 }
 
 .quote-credit {
@@ -131,24 +186,33 @@ a {
 
 /* positions and styles */
 .call-to-action-container { 
-    display: flex;  
+    display: flex;
+    flex-direction: row;  
     margin: 60px 0px;
     justify-content: center;
 }
 
 /* is named links to stay consistent even though it doesn't cantain any links */
 .call-to-action-panel {
+    flex: 1;
     display: flex;
     flex-direction: row;
-    gap: 16px;
-    background-color: #aaccfb;
+    gap: 32px;
+    background-color: #3882F6;
+    justify-content: space-evenly;
     align-items: center;
+    margin: 0px 62px;
+    padding: 48px;
+    border-style: none;
+    border-width: 3px;
+    border-radius: 9px;
 }
 
 .left-links {
     display: flex;
     flex-direction: column;
     gap: 6px;
+    color: #F9FAF8;
 
 }
 
@@ -157,7 +221,25 @@ a {
     margin: 0px;
 }
 
+
+.call-to-action-panel .sign-up-button{
+    border-radius: 9px;
+    text-align: center;
+    padding: 12px 48px;
+    color: #E5E7EB;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: #3882F6;
+    border-color:#E5E7EB;
+    border-width: 3px;
+
+}
+
 /* styles and positions footer */
 .footer {
     text-align: center;
+    padding: 32px 0;
+    background-color: #1F2937;
+    color:#F9FAF8;
+
 }
